@@ -4,6 +4,9 @@
 
 * handle mailto when astroid is already running.
 
+* session-persistent folder history for attaching files and saving
+  attachments. default is configurable.
+
 == v0.7 / 2017-01-02
 
 * Messages are marked unread after a delay (default 2 sec) in
